# aoc

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  new.sh  pyproject.toml  run.sh
.github/actions/coverage/: Dockerfile  action.yaml  entrypoint.sh
.github/workflows/: action.yaml  go.yaml  python.yaml
aoc/: go.mod  main.go  main.py
aoc/support/: go.yaml  python.yaml
aoc/year2021/day01/: README.md  day01.go
aoc/year2021/day02/: day02.go  day02_test.go
aoc/year2021/day03/: day03.go
aoc/year2021/day04/: bingo.go  day04.go
aoc/year2021/day05/: cartesian.go  day05.go  day05_test.go
aoc/year2021/day06/: README.md  day06.go  day06_test.go
aoc/year2021/day07/: README.md  day07.go  day07_test.go
aoc/year2021/day08/: day08.go  day08_test.go
aoc/year2021/day09/: day09.go
aoc/year2021/day10/: README.md  day10.go  day10_test.go
aoc/year2021/day11/: day11.go  day11_test.go
aoc/year2022/: README.md
aoc/year2022/day01/: day01.py  main.py  test_main.py
aoc/year2022/day02/: day02.py  day02_test.py  main.py  test_main.py
aoc/year2022/day03/: day03.py  main.py  test_main.py
aoc/year2022/day04/: day04.py  day04_test.py  main.py  test_main.py
aoc/year2022/day05/: README.md  day05.py  day05_test.py  main.py  test_main.py
aoc/year2022/day06/: README.md  day06.py  main.py  test_main.py
aoc/year2022/day07/: day07.py  main.py  test_main.py
aoc/year2022/day08/: day08.py  day08_test.py  main.py  test_main.py
aoc/year2022/day09/: README.md  day09.py  main.py  test_main.py
aoc/year2022/day10/: README.md  day10.py  device.py  main.py  test_main.py
aoc/year2022/day11/: day11.py  main.py  monkey.py  test_main.py
aoc/year2022/day12/: README.md  day12.py  main.py  test_main.py
aoc/year2022/day13/: day13.py  main.py  test_main.py
aoc/year2022/day14/: day14.py  main.py  test_main.py
aoc/year2023/day01/: day01.py  main.py  test_main.py
aoc/year2024/: README.md
aoc/year2024/day01/: README.md  day01.go  day01.py  day01_test.py  test_main.py
aoc/year2024/day02/: day02.py  day02_test.py  main.py  test_main.py
aoc/year2024/day03/: README.md  day03.py  day03_test.py  main.py  test_main.py
aoc/year2024/day04/: README.md  day04.py  day04_test.py  test_main.py
aoc/year2024/day05/: day05.py  day05_test.py  test_main.py
aoc/year2024/day06/: day06.py  day06_test.py  main.py  test_main.py
aoc/year2024/day07/: README.md  day07.py  day07_test.py
aoc/year2024/day08/: README.md  day08.py  day08_test.py  main.py  test_main.py
aoc/year2024/day09/: README.md  day09.py  day09_test.py
aoc/year2024/day10/: README.md  day10.py  day10_test.py
aoclib/go/: errors.go  errors_test.go  go.mod  helpers.go  helpers_test.go  slices.go  slices_test.go
aoclib/python/: pyproject.toml
golang/: go.mod  go.sum  main.go
golang/2021/: README.md  day_01.go
golang/internal/: helpers.go
golang/utils/: errors.go  errors_test.go  helpers.go  helpers_test.go  slices.go  slices_test.go  types.go
puzzle_readmes/2021/: 02.md  03.md  04.md  05.md  08.md  09.md  11.md
puzzle_readmes/2022/: 01.md  02.md  03.md  04.md  07.md  08.md  10.md  11.md  13.md  14.md
puzzle_readmes/2023/: 01.md  02.md  03.md
puzzle_readmes/2024/: 01.md  02.md  05.md  06.md
python/utils/: __init__.py  algorithms.py  conftest.py  display.py  grid.py  helpers.py  pyproject.toml  test_algorithms.py  test_display.py  test_grid.py  test_helpers.py
python/year2023/: README.md
system/: golang.sh  python.sh  readme.py  shared.sh
system/misc/: miscellaneous.md
utils/: golang.sh  python.sh  readme.py  shared.sh  system.sh
(+148 files in other folders)
