[tool.poetry]
name = "aoc"
version = "2022.0.0"
description = "Attempting Advent of Code in Golang and Python."
authors = ["Brendan Cazier <cazier@github>"]
packages = [
    { include = "utils", from = "python" }
]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"

[tool.poetry.group.testing.dependencies]
ward = { git = "https://github.com/darrenburns/ward.git", rev = "df2f69c0eca6bd21ba258b51214849f7c16eb459" }
coverage = "^7.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ipython = "^8.18.1"
black = "^23.11.0"
pudb = "^2023.1"
isort = "^5.12.0"
pylint = "^3.0.2"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.'BASIC']
good-names="x,y,G,x1,x2,y1,y2"

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-module-docstring,missing-function-docstring"

[tool.mypy]
strict = true
mypy_path = "python"
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.ward]
hook_module = ['utils.conftest']
