[project]
name = "aoc"
version = "2023.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brendan Cazier", email = "520246+cazier@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4",
    "utils",
]

[project.scripts]
aoc = "aoc:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.uv]
dev-dependencies = [
    "coverage>=7.6.8",
    "ipython>=8.30.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
    "ward>=0.68.0b0",
]

[tool.uv.workspace]
members = ["python/utils"]

[tool.uv.sources]
utils = { workspace = true }

[tool.ruff]
line-length = 120

[tool.isort]
line_length = 120
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
strict = true
mypy_path = "python"
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.ward]
hook_module = ['utils.conftest']
