[project]
name = "aoc"
version = "2023.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brendan Cazier", email = "520246+cazier@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "rich>=13.9.4",
    "typer>=0.15.1",
    "aoclib",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aoc"]

[project.scripts]
aoc = "aoc.main:app"

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.8",
    "ipython>=8.30.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pdbr>=0.8.9",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "types-pyyaml>=6.0.12.20240917",
    "ward>=0.68.0b0",
]

[tool.uv.sources]
aoclib = { workspace = true }

[tool.uv.workspace]
members = ["aoclib/python"]

[tool.coverage.report]
omit = [ "aoclib/python/src/aoclib/readme.py" ]

[tool.ruff]
line-length = 120

[tool.isort]
line_length = 120
length_sort = true
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
strict = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[tool.ward]
hook_module = ['aoclib.conftest']
